samples/_failures_safe/1761557135_9e1473_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_edab63b6.c: In function ‘main’:
./samples/SAFE/__tmp_edab63b6.c:148:9: error: expected declaration or statement at end of input
  148 |         printf("\nHighest severity level found: %s\n", level_to_string(highest_level));
      |         ^~~~~~
./samples/SAFE/__tmp_edab63b6.c:148:9: error: expected declaration or statement at end of input
